fix scrollbar style in firefox

--- a/src/textarea/textarea.less
+++ b/src/textarea/textarea.less
@@ -50,8 +50,8 @@
 
     .character-limited {
         resize: none;
-        scrollbar-color:  @gray-dark;
-        scrollbar-width: 0.3em;
+        scrollbar-color: @gray-darker @gray-darker;
+        scrollbar-width: thin;
     }
 
     .character-limited::-webkit-scrollbar-track {
@@ -73,6 +73,7 @@
         margin-bottom: 5px;
         font-size: 10px;
         z-index: 2;
+        line-height: 14px;
     }
 
 }
